--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SA Tools Shop</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Project start</h1>
+    <div class="nav">
+        <div class="logo"><img class="logoimage" src="logo.png" alt="">
+        </div>
+        <div class="navbar">
+            <ul class="nav nav-underline"> 
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">CATEGORIES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ABOUT US</a>
+                </li>
+            </ul>
+        </div>
+
+    </div>    
 </body>
 </html>
