all cotegories pages completed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="#">CONTACT</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="indexcategories.html">CATEGORIES</a>
+                <a class="nav-link" href="indexcategories.html">CATEGORIES</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">ABOUT US</a>
@@ -139,7 +139,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img class="tool3" src="drill DHP489.png" class="card-img-top" alt="...">
+                <img class="tool3" src="powertool/drill DHP489.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">DHP489 Cordless hammer Driver Drill</h5>
                   <p class="card-text">390$</p>
@@ -148,7 +148,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img class="tool4" src="Drawer tool.jpg" class="card-img-top" alt="...">
+                <img class="tool4" src="tooldrawer/340PCS W8-Drawer Jumbo Tool Trolley.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">340PCS W/8-Drawer Jumbo Tool Trolley</h5>
                   <p class="card-text">4500$</p>
@@ -157,7 +157,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img class="tool5" src="power impact wrench.jpg" class="card-img-top" alt="...">
+                <img class="tool5" src="powertool/power impact wrench.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">TW001G Cordless Impact Wrench</h5>
                   <p class="card-text">325$</p>
