Contact page and About page complete with responsive all done

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <a class="nav-link active" aria-current="page" href="#">HOME</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="indexcontact.html">CONTACT</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="indexcategories.html">CATEGORIES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT US</a>
+                    <a class="nav-link" href="indexabout.html">ABOUT US</a>
                 </li>
             </ul>
         </div>
