--- a/indexpowertool.html
+++ b/indexpowertool.html
@@ -16,20 +16,27 @@
         <div class="logo"><img class="logoimage" src="logo.png" alt="">
         </div>
         <div class="navbar">
-            <ul class="nav nav-underline"> 
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">CATEGORIES</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT US</a>
-                </li>
-            </ul>
+          <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="indexcontact.html">CONTACT</a>
+            </li>
+            <div class="dropdown">
+                <button class="dropbtn">CATEGORIES</button>
+                <div class="dropdown-content">
+                  <a href="indexcategories.html">Handheld Tool</a>
+                  <a href="indexpowertool.html">Power Tool</a>
+                  <a href="indextooldrawer.html">Tool Drawer</a>
+                  <a href="indexaircompressor.html">Air Compressor</a>
+                  <a href="indexjack.html">Jack</a>
+                </div>
+              </div>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="indexabout.html">ABOUT US</a>
+            </li>
+        </ul>
         </div>
     </div>
     
